[gd_scene load_steps=18 format=3 uid="uid://uxemgi6o3xxy"]

[ext_resource type="Texture2D" uid="uid://bw8xoe1bxro58" path="res://sprites/tileset.png" id="1_govcn"]
[ext_resource type="Script" path="res://scripts/tutorial.gd" id="1_sd5ac"]
[ext_resource type="PackedScene" uid="uid://bnccpkg8tqvj" path="res://nodes/player.tscn" id="2_4t7oa"]
[ext_resource type="PackedScene" uid="uid://bff6f675uebmi" path="res://nodes/label.tscn" id="3_bksrb"]
[ext_resource type="PackedScene" uid="uid://b8b6mvf1t3ufr" path="res://nodes/mob.tscn" id="3_n70pf"]
[ext_resource type="Texture2D" uid="uid://c2gmudvsf7kl6" path="res://sprites/platform.png" id="5_a3xx1"]
[ext_resource type="Texture2D" uid="uid://u0y1hn2kbadw" path="res://sprites/dummy.png" id="6_2it4d"]
[ext_resource type="Script" path="res://scripts/reset.gd" id="6_rinrb"]
[ext_resource type="Texture2D" uid="uid://b68mccq5bi57b" path="res://sprites/shadow.png" id="7_awxev"]
[ext_resource type="Texture2D" uid="uid://c0ljyg4n70vgv" path="res://sprites/button.png" id="8_1fmmr"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hgf26"]
texture = ExtResource("1_govcn")
0:0/0 = 0
0:0/0/custom_data_0 = true
1:0/0 = 0
1:0/0/custom_data_0 = true
2:0/0 = 0
2:0/0/custom_data_0 = true
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
0:2/0/custom_data_0 = true
1:2/0 = 0
1:2/0/custom_data_0 = true
2:2/0 = 0
2:2/0/custom_data_0 = true
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
0:3/0/custom_data_0 = true
1:3/0 = 0
1:3/0/custom_data_0 = true
2:3/0 = 0
2:3/0/custom_data_0 = true
3:3/0 = 0
3:3/0/custom_data_0 = true
4:3/0 = 0
4:3/0/custom_data_0 = true
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
2:5/0/custom_data_0 = true
3:5/0 = 0
3:5/0/custom_data_0 = true
4:5/0 = 0
4:5/0/custom_data_0 = true
5:0/0 = 0
5:0/0/custom_data_0 = true

[sub_resource type="TileSet" id="TileSet_ocfln"]
custom_data_layer_0/name = "walk"
custom_data_layer_0/type = 1
sources/0 = SubResource("TileSetAtlasSource_hgf26")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l2sjv"]
size = Vector2(14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_too1s"]
atlas = ExtResource("8_1fmmr")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3023"]
atlas = ExtResource("8_1fmmr")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_x8huv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_too1s")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3023")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ogjb0"]
size = Vector2(14, 14)

[node name="tutorial" type="Node2D"]
script = ExtResource("1_sd5ac")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_ocfln")
format = 2
layer_0/tile_data = PackedInt32Array(262152, 0, 2, 327688, 0, 3, 262153, 65536, 2, 327689, 65536, 3, 393224, 0, 2, 458760, 0, 3, 393225, 65536, 2, 458761, 65536, 3, 524296, 0, 2, 589832, 0, 3, 524297, 65536, 2, 589833, 65536, 3, 655368, 0, 2, 655369, 65536, 2, 262154, 0, 2, 327690, 0, 3, 262155, 65536, 2, 327691, 65536, 3, 393226, 0, 2, 458762, 0, 3, 393227, 65536, 2, 458763, 65536, 3, 524298, 0, 2, 589834, 0, 3, 524299, 65536, 2, 589835, 65536, 3, 655370, 0, 2, 655371, 65536, 2, 262156, 0, 2, 327692, 0, 3, 262157, 65536, 2, 327693, 65536, 3, 393228, 0, 2, 458764, 0, 3, 393229, 65536, 2, 458765, 65536, 3, 524300, 0, 2, 589836, 0, 3, 524301, 65536, 2, 589837, 65536, 3, 655372, 0, 2, 655373, 65536, 2, 262158, 0, 2, 327694, 0, 3, 262159, 65536, 2, 327695, 65536, 3, 393230, 0, 2, 458766, 0, 3, 393231, 65536, 2, 458767, 65536, 3, 524302, 0, 2, 589838, 0, 3, 524303, 65536, 2, 589839, 65536, 3, 655374, 0, 2, 655375, 65536, 2, 196616, 131072, 3, 196617, 131072, 2, 196618, 131072, 3, 196619, 131072, 2, 196620, 131072, 3, 196621, 131072, 2, 196622, 131072, 3, 196623, 131072, 2, 131080, 0, 4, 131087, 131072, 4, 131081, 262144, 4, 131082, 262144, 4, 131083, 0, 5, 131084, 65536, 4, 131085, 196608, 4, 131086, 0, 5, 65544, 65536, 1, 65545, 65536, 1, 65546, 65536, 1, 65547, 65536, 1, 65548, 65536, 1, 65549, 65536, 1, 65550, 65536, 1, 65551, 65536, 1, 65552, 262144, 1, 65543, 196608, 1, 720912, 262144, 2, 720903, 196608, 2, 720904, 65536, 1, 720905, 65536, 1, 720906, 65536, 1, 720907, 65536, 1, 720908, 65536, 1, 720909, 65536, 1, 720910, 65536, 1, 720911, 65536, 1, 131088, 131072, 1, 196624, 131072, 1, 262160, 131072, 1, 327696, 131072, 1, 393232, 131072, 1, 458768, 131072, 1, 524304, 131072, 1, 589840, 131072, 1, 655376, 131072, 1, 131079, 131072, 1, 196615, 131072, 1, 262151, 131072, 1, 327687, 131072, 1, 393223, 131072, 1, 458759, 131072, 1, 524295, 131072, 1, 589831, 131072, 1, 655367, 131072, 1, 786439, 0, 4, 786448, 131072, 4, 786440, 65536, 4, 786441, 262144, 4, 786442, 65536, 4, 786443, 196608, 4, 786444, 65536, 4, 786445, 0, 5, 786446, 262144, 4, 786447, 196608, 4, 0, 131072, 0, 1, 131072, 0, 2, 131072, 0, 3, 131072, 0, 4, 131072, 0, 5, 131072, 0, 6, 131072, 0, 7, 131072, 0, 8, 131072, 0, 9, 131072, 0, 10, 131072, 0, 11, 131072, 0, 12, 131072, 0, 13, 131072, 0, 14, 131072, 0, 15, 131072, 0, 16, 131072, 0, 17, 131072, 0, 18, 131072, 0, 19, 131072, 0, 20, 131072, 0, 21, 131072, 0, 22, 131072, 0, 23, 131072, 0, 65553, 131072, 0, 131089, 131072, 0, 196625, 131072, 0, 262161, 131072, 0, 327697, 131072, 0, 393233, 131072, 0, 458769, 131072, 0, 524305, 131072, 0, 589841, 131072, 0, 655377, 131072, 0, 720913, 131072, 0, 786449, 131072, 0, 851985, 131072, 0, 65554, 131072, 0, 131090, 131072, 0, 196626, 131072, 0, 262162, 131072, 0, 327698, 131072, 0, 393234, 131072, 0, 458770, 131072, 0, 524306, 131072, 0, 589842, 131072, 0, 655378, 131072, 0, 720914, 131072, 0, 786450, 131072, 0, 851986, 131072, 0, 65555, 131072, 0, 131091, 131072, 0, 196627, 131072, 0, 262163, 131072, 0, 327699, 131072, 0, 393235, 131072, 0, 458771, 131072, 0, 524307, 131072, 0, 589843, 131072, 0, 655379, 131072, 0, 720915, 131072, 0, 786451, 131072, 0, 851987, 131072, 0, 65556, 131072, 0, 131092, 131072, 0, 196628, 131072, 0, 262164, 131072, 0, 327700, 131072, 0, 393236, 131072, 0, 458772, 131072, 0, 524308, 131072, 0, 589844, 131072, 0, 655380, 131072, 0, 720916, 131072, 0, 786452, 131072, 0, 851988, 131072, 0, 65557, 131072, 0, 131093, 131072, 0, 196629, 131072, 0, 262165, 131072, 0, 327701, 131072, 0, 393237, 131072, 0, 458773, 131072, 0, 524309, 131072, 0, 589845, 131072, 0, 655381, 131072, 0, 720917, 131072, 0, 786453, 131072, 0, 851989, 131072, 0, 65558, 131072, 0, 131094, 131072, 0, 196630, 131072, 0, 262166, 131072, 0, 327702, 131072, 0, 393238, 131072, 0, 458774, 131072, 0, 524310, 131072, 0, 589846, 131072, 0, 655382, 131072, 0, 720918, 131072, 0, 786454, 131072, 0, 851990, 131072, 0, 65559, 131072, 0, 131095, 131072, 0, 196631, 131072, 0, 262167, 131072, 0, 327703, 131072, 0, 393239, 131072, 0, 458775, 131072, 0, 524311, 131072, 0, 589847, 131072, 0, 655383, 131072, 0, 720919, 131072, 0, 786455, 131072, 0, 851991, 131072, 0, 851968, 131072, 0, 851969, 131072, 0, 851970, 131072, 0, 851977, 131072, 0, 851978, 131072, 0, 851979, 131072, 0, 851980, 131072, 0, 851981, 131072, 0, 851982, 131072, 0, 851983, 131072, 0, 851984, 131072, 0, 65536, 131072, 0, 131072, 131072, 0, 196608, 131072, 0, 262144, 131072, 0, 327680, 131072, 0, 393216, 131072, 0, 458752, 131072, 0, 524288, 131072, 0, 589824, 131072, 0, 655360, 131072, 0, 720896, 131072, 0, 786432, 131072, 0, 65537, 131072, 0, 131073, 131072, 0, 196609, 131072, 0, 262145, 131072, 0, 327681, 131072, 0, 393217, 131072, 0, 458753, 131072, 0, 524289, 131072, 0, 589825, 131072, 0, 655361, 131072, 0, 720897, 131072, 0, 786433, 131072, 0, 65538, 131072, 0, 131074, 131072, 0, 196610, 131072, 0, 262146, 131072, 0, 327682, 131072, 0, 393218, 131072, 0, 458754, 131072, 0, 524290, 131072, 0, 589826, 131072, 0, 655362, 131072, 0, 720898, 131072, 0, 786434, 131072, 0, 65539, 131072, 0, 131075, 131072, 0, 196611, 131072, 0, 262147, 131072, 0, 327683, 131072, 0, 393219, 131072, 0, 458755, 131072, 0, 524291, 131072, 0, 589827, 131072, 0, 655363, 131072, 0, 720899, 131072, 0, 786435, 131072, 0, 65540, 131072, 0, 131076, 131072, 0, 196612, 131072, 0, 262148, 131072, 0, 327684, 131072, 0, 393220, 131072, 0, 458756, 131072, 0, 524292, 131072, 0, 589828, 131072, 0, 655364, 131072, 0, 720900, 131072, 0, 786436, 131072, 0, 65541, 131072, 0, 131077, 131072, 0, 196613, 131072, 0, 262149, 131072, 0, 327685, 131072, 0, 393221, 131072, 0, 458757, 131072, 0, 524293, 131072, 0, 589829, 131072, 0, 655365, 131072, 0, 720901, 131072, 0, 786437, 131072, 0, 65542, 131072, 0, 131078, 131072, 0, 196614, 131072, 0, 262150, 131072, 0, 327686, 131072, 0, 393222, 131072, 0, 458758, 131072, 0, 524294, 131072, 0, 589830, 131072, 0, 655366, 131072, 0, 720902, 131072, 0, 786438, 131072, 0, 851971, 131072, 0, 851972, 131072, 0, 851973, 131072, 0, 851974, 131072, 0, 851975, 131072, 0, 851976, 131072, 0)

[node name="buttons" type="Node2D" parent="."]

[node name="button_knight" type="Area2D" parent="buttons"]
position = Vector2(248, 168)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="buttons/button_knight"]
shape = SubResource("RectangleShape2D_l2sjv")

[node name="button_knight" type="AnimatedSprite2D" parent="buttons/button_knight"]
sprite_frames = SubResource("SpriteFrames_x8huv")
animation = &"off"
autoplay = "off"

[node name="knight_spawn" type="Marker2D" parent="buttons/button_knight"]
position = Vector2(-48, -48)

[node name="knight_die" type="Marker2D" parent="buttons/button_knight"]
position = Vector2(34, 2)

[node name="button_golem" type="Area2D" parent="buttons"]
position = Vector2(136, 56)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="buttons/button_golem"]
shape = SubResource("RectangleShape2D_l2sjv")

[node name="button_golem" type="AnimatedSprite2D" parent="buttons/button_golem"]
sprite_frames = SubResource("SpriteFrames_x8huv")
animation = &"off"
autoplay = "off"

[node name="golem_spawn" type="Marker2D" parent="buttons/button_golem"]
position = Vector2(48, 48)

[node name="golem_die" type="Marker2D" parent="buttons/button_golem"]
position = Vector2(-34, 0)

[node name="label" parent="." instance=ExtResource("3_bksrb")]

[node name="tutorial" type="Node2D" parent="."]
y_sort_enabled = true

[node name="mob" parent="tutorial" instance=ExtResource("3_n70pf")]
position = Vector2(282, 170)

[node name="mob2" parent="tutorial" instance=ExtResource("3_n70pf")]
position = Vector2(102, 56)

[node name="player" parent="tutorial" instance=ExtResource("2_4t7oa")]
position = Vector2(184, 168)

[node name="dummys" type="Node2D" parent="tutorial"]
y_sort_enabled = true

[node name="dummy" type="Node2D" parent="tutorial/dummys" groups=["decors"]]
position = Vector2(136, 136)
scale = Vector2(0.9, 0.9)

[node name="Shadow" type="Sprite2D" parent="tutorial/dummys/dummy"]
modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 1.11111)
texture = ExtResource("7_awxev")
offset = Vector2(0, 2)

[node name="Platform" type="Sprite2D" parent="tutorial/dummys/dummy"]
texture = ExtResource("5_a3xx1")

[node name="Dummy" type="Sprite2D" parent="tutorial/dummys/dummy/Platform"]
position = Vector2(0, -4)
texture = ExtResource("6_2it4d")

[node name="Area2D" type="Area2D" parent="tutorial/dummys/dummy/Platform"]
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="tutorial/dummys/dummy/Platform/Area2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ogjb0")

[node name="dummy2" type="Node2D" parent="tutorial/dummys" groups=["decors"]]
position = Vector2(248, 136)
scale = Vector2(0.9, 0.9)

[node name="Shadow" type="Sprite2D" parent="tutorial/dummys/dummy2"]
modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 1.11111)
texture = ExtResource("7_awxev")
offset = Vector2(0, 2)

[node name="Platform" type="Sprite2D" parent="tutorial/dummys/dummy2"]
texture = ExtResource("5_a3xx1")

[node name="Dummy" type="Sprite2D" parent="tutorial/dummys/dummy2/Platform"]
position = Vector2(0, -4)
texture = ExtResource("6_2it4d")
flip_h = true

[node name="Area2D" type="Area2D" parent="tutorial/dummys/dummy2/Platform"]
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="tutorial/dummys/dummy2/Platform/Area2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ogjb0")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
zoom = Vector2(3, 3.1)

[node name="restart" type="CharacterBody2D" parent="."]
position = Vector2(193, -83)
scale = Vector2(0.5, 0.5)
script = ExtResource("6_rinrb")

[node name="Panel" type="Panel" parent="restart"]
offset_left = -55.0
offset_top = -57.0
offset_right = 54.0
offset_bottom = 56.0

[node name="resum" type="Button" parent="restart"]
offset_left = -38.0
offset_top = -52.0
offset_right = 37.0
offset_bottom = -21.0
text = "resum"

[node name="quit" type="Button" parent="restart"]
offset_left = -38.0
offset_top = 20.0
offset_right = 38.0
offset_bottom = 51.0
text = "quit"

[node name="menu" type="Button" parent="restart"]
offset_left = -38.0
offset_top = -16.0
offset_right = 38.0
offset_bottom = 15.0
text = "menu"

[connection signal="area_entered" from="buttons/button_knight" to="." method="_on_button_knight_area_entered"]
[connection signal="area_exited" from="buttons/button_knight" to="." method="_on_button_knight_area_exited"]
[connection signal="area_entered" from="buttons/button_golem" to="." method="_on_button_golem_area_entered"]
[connection signal="area_exited" from="buttons/button_golem" to="." method="_on_button_golem_area_exited"]
[connection signal="pressed" from="restart/resum" to="restart" method="_on_resum_pressed"]
[connection signal="pressed" from="restart/quit" to="restart" method="_on_quit_pressed"]
[connection signal="pressed" from="restart/menu" to="restart" method="_on_menu_pressed"]
